guides/wide-ep-lws/manifests/gateway/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-wide-ep-inference-gateway
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: "istio"
  infrastructure:
    parametersRef:
      name: infra-wide-ep-inference-gateway
      group: ""
      kind: ConfigMap
